# muni-lab-core

./: .gitignore  Conda.cmd.exe.lnk  LICENSE  README.md  dir.py  requirements.txt  run_broker_positions_pipeline.py  setup.cfg
config/: example_config.yaml
data/AAA_MUNI_CURVE/: aaa_curves.xlsx
docs/: MASTER_SPEC.md
examples/: _config.yaml  curve_from_excel.py  export_curve_bundle_to_excel.py  run_export_curve_overlay.py  run_export_krd_curve_overlays.py  run_export_krd_overlay.py  run_oas_scan.py  run_one_bond_krd.py  run_portfolio_krd.py  test_hw_pricer.py
src/muni_core/: __init__.py
src/muni_core/calls/: __init__.py  call_schedule.py  npv_call_test.py
src/muni_core/config/: __init__.py  loader.py
src/muni_core/curves/: __init__.py  build_curve.py  build_curve_bundle.py  export_curve_debug.py  forward_helpers.py  history.py  hw_curve_builders.py  loader.py  muni_model.py  short_rate.py  short_rate_lattice.py  spot.py  spot_sources.py  types.py  zero_curve.py
src/muni_core/io/: __init__.py  bond_loader.py
src/muni_core/model/: __init__.py  bond.py
src/muni_core/npv/: __init__.py  cashflows.py  issuer.py  pricer.py
src/muni_core/oas/: __init__.py  callable_dv01_hw.py  callable_krd_hw.py  callable_oas_hw.py  simple_oas.py
src/muni_core/pricing/: __init__.py  hw_bond_pricer.py  hw_bond_pricer_override.py
tests/: conftest.py  test_build_dense_curve_smoke.py  test_callable_hw_stack.py  test_config_and_sources.py  test_curve_bundle_build.py  test_dense_curve_parallel_bump.py  test_deterministic_parallel_duration_hw.py  test_hw_curve_bundle.py
(+16 files in other folders)
