[metadata]
name = muni-lab-core
version = 0.1.0
description = Core municipal bond analytics engine (curves, NPV, call modeling)
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark Miller
license = MIT
license_files = LICENSE
url = https://github.com/markmiller66/muni-lab-core
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas
    numpy
    openpyxl
    QuantLib
    scipy
    pyyaml

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    black
    isort
    mypy

[flake8]
max-line-length = 120

[tool:pytest]
testpaths = tests
